TODO: version 2.2.0

24.6.2015: version 2.1.12
+ more icons

23.6.2015: version 2.1.11
+ nicer icons

22.6.2015: version 2.1.10
+ upgraded libraries versions
+ added gzip compression to standalone so that it's even faster

14.6.2015: version 2.1.9
> thanks Ashley Hardesty for these suggestions
+ displaying current version in admin zone
+ button for clearing check results
+ chart stats
+ configurable chart Y-axis maximum
+ overall UI changes

3.6.2015: version 2.1.8
> thanks Ashley Hardesty for these suggestions
+ it's possible now to run the application as a Windows service

2.6.2015: version 2.1.7
+ added emailFrom field in configuration
+ tested more email providers

27.5.2015: version 2.1.6
+ modified defaults for sending emails, now it's much easier
+ added email configuration examples (localhost, mandrillapp, gmail) and a test tool to easily validate email configuration

19.5.2015: version 2.1.5
+ configurable db port in standalone application

5.2.2015: version 2.1.4
+ XML (using XPath) and JSON (using JSONPath) monitoring 
  - so far only GET method and XPath only retrieves text value, this might change in the future

1.2.2015: version 2.1.3
+ configurable User-Agent header
+ proxy support
+ optimized standalone application startup speed
+ reset-admin-credentials.bat for standalone application
+ spider check optimization and bugfixes
+ basic authentication
+ split configuration to several parts

16.1.2015: version 2.1.2
+ more configuration options (default send emails, default spider check interval)

10.1.2015: version 2.1.1
+ spider check
+ rearranged input fields in check forms

9.1.2015: version 2.1
+ configurable http port in standalone application
+ in standalone application default port changed from 8080 to 8081
+ startup.bat, zipped all files together

5.1.2015: version 2.0
+ complete rewrite of version 1.0