@@ -1,7 +1,8 @@
 TODO: version 2.2.0
 
 24.6.2015: version 2.1.12
-+ more icons
++ more nicer icons
++ more compact check date
 
 23.6.2015: version 2.1.11
 + nicer icons
